--- a/src/content/technotes/TN0004-router-authentication.mdx
+++ b/src/content/technotes/TN0004-router-authentication.mdx
@@ -14,7 +14,7 @@ When using the Apollo Router as the entry point to your federated supergraph, yo
 - [Use the JWT Authentication plugin](#use-the-jwt-authentication-plugin) to your supergraph.
 - [Use a coprocessor](#use-a-coprocessor).
 
-In fact, you can [combine all three strategies](#combining-authentication-strategies) to create a more robust authentication system!
+In fact, we recommend you [combine all three strategies](#combining-authentication-strategies) to create a more robust authentication system!
 
 ## Authenticate in subgraphs
 
