--- a/src/content/graphos/explorer/connecting-authenticating.mdx
+++ b/src/content/graphos/explorer/connecting-authenticating.mdx
@@ -343,6 +343,27 @@ The prompt supports Markdown rendering of the `msg` parameter.
 <tr>
 <td>
 
+
+
+##### `explorer.oauth2Request`
+
+`(authUrl: string, queryParams?: Record<string, string>) => Promise<Record<string, string> | null>`
+
+</td>
+<td>
+
+Function that prompts the user to authenticate using your OAuth 2.0 provider's URL (specified by `authUrl`). Provide any required query parameters to the auth endpoint via the `queryParams` parameter.
+
+This function returns a promise containing the query parameters from your OAuth provider's response. If the user cancels the prompt, the promise resolves to `null`.
+
+For OAuth 2.0 authentication to work with the Explorer, your OAuth 2.0 provider must recognize `https://studio.apollographql.com/explorer-oauth2` as a valid redirect URL. You can configure this in your OAuth 2.0 provider settings when you set up a new client or application.
+
+</td>
+</tr>
+
+<tr>
+<td>
+
 ##### `explorer.request.body`
 
 `{ query: string; variables: { [key in string]?: JSONValue } | null; operationName: string | undefined; }`
