File upload in Explorer Docs (#409)
* add snippet about file upload in docs

* Tweak file upload content

---------

Co-authored-by: Stephen Barlow <stephen@apollographql.com>

--- a/src/content/graphos/explorer/additional-features.mdx
+++ b/src/content/graphos/explorer/additional-features.mdx
@@ -54,6 +54,19 @@ query ($id: ID!) {
 }
 ```
 
+## File upload
+
+The Explorer supports file upload for servers that support the [GraphQL multipart request spec](https://github.com/jaydenseric/graphql-multipart-request-spec). To run an operation that requires files as input, click **+ Add files** in the Explorer's **Variables** tab:
+
+<img
+  className="screenshot"
+  src="../img/explorer-file-upload.jpg"
+  alt="File upload in the Explorer"
+  width="500"
+/>
+
+You can then set the name of the variable and select the files you want to upload. Note that if your operation supports providing _multiple_ files via a single variable, you need to select the toggle for that variable to enable the multi-file protocol.
+
 ## Local development
 
 You can use the Explorer for local development by opening [Sandbox](./sandbox/).
