Minor wording tweaks to GraphOS docs

--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -51,7 +51,7 @@ These features (along with many others) are available to organizations on the **
 > [Learn about Apollo plans.](https://www.apollographql.com/pricing/)
 
 - [**Cloud routing.**](./routing/cloud/)
-  - GraphOS automatically provisions and hosts a router for each of your supergraphs. Clients query your router instead of individual subgraphs, which enables the router to automatically collect operation metrics that you can then visualize in Apollo Studio.
+  - GraphOS automatically provisions and hosts a router for each of your supergraphs. Clients query your router instead of individual **subgraphs**, enabling the router to automatically collect operation metrics that you can then [visualize in Apollo Studio](./metrics/).
 - **The schema registry.**
   - GraphOS tracks the GraphQL schemas for all of your individual subgraphs, and it also handles **composing** those subgraph schemas into one _supergraph_ schema for your router.
 - **Safe schema delivery.**
