--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -44,10 +44,10 @@ Description
 </td>
 <td>
 
-A federated supergraph consisting of:
+A supergraph consisting of:
 
-* A GraphOS-hosted router
-* One or more subgraphs hosted in your infrastructure
+* A GraphOS-hosted **router**
+* One or more **subgraphs** hosted in your infrastructure
 
 **Recommended** for all organizations getting started with GraphOS.
 
@@ -63,10 +63,10 @@ A federated supergraph consisting of:
 </td>
 <td>
 
-A federated supergraph consisting of:
+A supergraph consisting of:
 
-* A router hosted in your infrastructure
-* One or more subgraphs hosted in your infrastructure
+* A **router** hosted in your infrastructure
+* One or more **subgraphs** hosted in your infrastructure
 
 Recommended for enterprise organizations that require full customization of their router, usually for advanced performance or data compliance reasons.
 
@@ -94,7 +94,7 @@ Recommended for enterprise organizations that require full customization of thei
 
 > Cloud supergraphs require an Apollo organization on the **Serverless (Free)** or **Serverless** plan. [Learn more about plans.](../org/plans/)
 
-**Cloud supergraphs** are recommended for every organization that's getting started with GraphOS. For every variant of a cloud supergraph, GraphOS provisions and manages a **router** that acts as the variant's public endpoint. Application clients communicate with this endpoint instead of communicating directly with your API:
+**Cloud supergraphs** are recommended for every organization that's getting started with GraphOS. For every variant of a cloud supergraph, GraphOS provisions and manages a **router** that acts as the variant's public endpoint. Application clients communicate with this endpoint instead of communicating directly with your GraphQL server(s):
 
 ```mermaid
 flowchart LR;
@@ -103,7 +103,7 @@ flowchart LR;
   router(["Router"]);
   end;
   subgraph "Your infrastructure";
-  api[Your GraphQL API];
+  api["Your GraphQL<br/>server"];
   router --- api
   end;
   clients -.- router;
@@ -114,7 +114,7 @@ The router automatically reports certain operation metrics to GraphOS, so you do
 
 > [Learn more about cloud routing.](../routing/cloud/)
 
-Cloud supergraphs use an architecture called [Apollo Federation](/federation/). With federation, you distribute your supergraph's capabilities across _multiple_ GraphQL services, which are known as **subgraphs**. The router executes client operations across multiple subgraphs as needed:
+Cloud supergraphs use an architecture called [Apollo Federation](/federation/). With federation, you can distribute your supergraph's capabilities across _multiple_ GraphQL services, which are known as **subgraphs**. The router executes client operations across multiple subgraphs as needed:
 
 ```mermaid
 flowchart LR;
