--- a/src/content/technotes/TN0040-federation-is-not-a-saga-orchestrator.mdx
+++ b/src/content/technotes/TN0040-federation-is-not-a-saga-orchestrator.mdx
@@ -4,7 +4,7 @@ id: TN0040
 tags: [federation]
 ---
 
-Apollo Federation is a powerful system for orchestrating queries across a distributed system. For example, you can use federation to:
+Apollo Federation is a powerful system for orchestrating queries across a distributed system. For example, you can use Federation to:
 
 - Query data from multiple systems in parallel.
 - Sequence calls to multiple systems when there are dependencies between them via [`@key` and `@requires` directives](/federation/entities-advanced).
@@ -12,9 +12,9 @@ Apollo Federation is a powerful system for orchestrating queries across a distri
 - Batch calls to a single system to [solve the infamous N+1 problem](/technotes/TN0019-federation-n-plus-1/).
 - Split a single call into multiple calls with different priorities [using `@defer`](/router/executing-operations/defer-support/).
 
-While you can expose mutations in your supergraph, and the query planner will call various systems to resolve mutation fields, Federation does not provide common distributed systems functionality such as compensating transactions, retries, or data propagation.
+Federation will apply the same orchestration capabilities to mutation fields (and their selection sets), but managing state changes across distributes systems typically involves additional requirements. Federation does not provide common functionality such as compensating transactions or data propagation between sibling fields.
 
-You will need to implement your own orchestration logic within single field resolvers to implement these requirements. This is in fact due to the design of GraphQL itself.
+You will need to implement your own orchestration logic within a single field resolver to implement these requirements. This is due to the design of GraphQL itself.
 
 ## Sequencing mutations in GraphQL
 
@@ -43,7 +43,7 @@ The GraphQL spec ensures that `validateAccount` and `setAccountStatus` will not 
 - We don't have a way to propagate data between mutations. For example, if `Mutation.createAccount` returns a `Account` with an `id`, we can't use that `id` in `validateAccount` or `setAccountStatus`.
 - Clients have to contend with a number of failure scenarios by inspecting the `success` field of each mutation and determining the appropriate course of action.
 
-Even if all three of these mutations were implemented in the same service, it's difficult to implement transactionality when run within the GraphQL execution engine. We should implement this operation as a single mutation resolver so that we can handle failures and rollbacks in one function.
+Even if all three of these mutations were implemented in the same service, it's difficult to implement the appropriate transactional semantics when run within the GraphQL execution engine. We should instead implement this operation as a single mutation resolver so that we can handle failures and rollbacks in one function.
 
 In this JavaScript example, we're implementing a simplistic ["saga"](https://microservices.io/patterns/data/saga.html) that orchestrates state changes across multiple systems.
 
@@ -85,13 +85,13 @@ This requirement leads to a few challenging questions:
 - In which subgraph service should we implement the resolver?
 - How does the resolver communicate with the data services?
 
-There are no right answers to these questions. The answer depends on your organization and the requirements of your system.
+There are no universally correct answers to these questions. It will depend on your organization, your product requirements, and the capabilities of your system.
 
-A potential strategy might be to create one or more subgraphs specifically for orchestrating mutations. They can communicate with data services using REST or RPC. Experience or product teams are often the most appropriate owners of these subgraphs.
+A potential strategy is to create one or more subgraphs specifically for orchestrating mutations. They can communicate with data services using REST or RPC. Experience or product teams are often the most appropriate owners of these subgraphs.
 
-It's tempting to have the orchestrating subgraph resolvers call back to Apollo Router to execute low-level mutations. This approach is feasible but requires careful attention to a number of details:
+It's tempting to have the orchestrating subgraph resolvers call back to Apollo Router to execute domain-specific mutations. This approach is feasible but requires careful attention to a number of details:
 
-- The calls to low-level mutations no longer originate in client applications, so you must propagate client identity and other request metadata.
+- The calls to domain-specific mutations no longer originate in client applications, so you must propagate client identity and other request metadata.
 - GraphOS will view these calls as separate operations.
 - If using cloud-native telemetry, you must ensure that Apollo Router receives the trace context to correlate spans.
-- Be wary of circular dependencies. Consider using [Contracts](/graphos/delivery/contracts/) to create variants specific to orchestration and eliminate the potential for loops in an operation.
+- Be wary of circular dependencies. Consider using [Contracts](/graphos/delivery/contracts/) to create variants that expose only the domain-specific mutations and eliminate the potential for loops in an operation.
