--- a/src/content/technotes/TN0040-federation-is-not-a-saga-orchestrator.mdx
+++ b/src/content/technotes/TN0040-federation-is-not-a-saga-orchestrator.mdx
@@ -12,9 +12,9 @@ Apollo Federation is a powerful system for orchestrating queries across a distri
 - Batch calls to a single system to [solve the infamous N+1 problem](/technotes/TN0019-federation-n-plus-1/).
 - Split a single call into multiple calls with different priorities [using `@defer`](/router/executing-operations/defer-support/).
 
-Federation will apply the same orchestration capabilities to mutation fields (and their selection sets), but managing state changes across distributes systems typically involves additional requirements. Federation does not provide common functionality such as compensating transactions or data propagation between sibling fields.
+Federation applies these same orchestration capabilities to mutation fields (and their selection sets), but managing state changes across distributed systems typically involves additional requirements. Federation does _not_ provide common functionality for these requirements, such as compensating transactions or data propagation between sibling fields.
 
-You will need to implement your own orchestration logic within a single field resolver to implement these requirements. This is due to the design of GraphQL itself.
+You need to implement your own orchestration logic within a single field resolver to implement these requirements. This is due to the design of GraphQL itself.
 
 ## Sequencing mutations in GraphQL
 
@@ -39,11 +39,11 @@ mutation DoMultipleThings {
 
 The GraphQL spec ensures that `validateAccount` and `setAccountStatus` will not execute if `createAccount` fails. At first glance, this seems like a way to transactionally execute a set of mutations, but it has some significant downsides:
 
-- We don't have a way to roll back the changes made by `createAccount` if `validateAccount` or `setAccountStatus` fail.
+- We don't have a way to roll back the changes made by `createAccount` if one of `validateAccount` or `setAccountStatus` fails.
 - We don't have a way to propagate data between mutations. For example, if `Mutation.createAccount` returns a `Account` with an `id`, we can't use that `id` in `validateAccount` or `setAccountStatus`.
 - Clients have to contend with a number of failure scenarios by inspecting the `success` field of each mutation and determining the appropriate course of action.
 
-Even if all three of these mutations were implemented in the same service, it's difficult to implement the appropriate transactional semantics when run within the GraphQL execution engine. We should instead implement this operation as a single mutation resolver so that we can handle failures and rollbacks in one function.
+Even if all three of these mutations are implemented in the same service, it's difficult to implement the appropriate transactional semantics when run within the GraphQL execution engine. We should instead implement this operation as a single mutation resolver so that we can handle failures and rollbacks in one function.
 
 In this JavaScript example, we're implementing a simplistic ["saga"](https://microservices.io/patterns/data/saga.html) that orchestrates state changes across multiple systems.
 
@@ -75,17 +75,17 @@ But what if the state changes occur in different services? Because GraphQL and F
 
 This requirement leads to a few challenging questions:
 
-- What team or domain owns this mutation field?
+- Which team or domain owns this mutation field?
 - In which subgraph service should we implement the resolver?
 - How does the resolver communicate with the data services?
 
-There are no universally correct answers to these questions. It will depend on your organization, your product requirements, and the capabilities of your system.
+There are no universally correct answers to these questions. Your answers will depend on your organization, your product requirements, and the capabilities of your system.
 
-A potential strategy is to create one or more subgraphs specifically for orchestrating mutations. They can communicate with data services using REST or RPC. Experience or product teams are often the most appropriate owners of these subgraphs.
+One potential strategy is to create one or more subgraphs specifically for orchestrating mutations. These subgraphs can communicate with data services using REST or RPC. Experience or product teams are often the most appropriate owners of these subgraphs.
 
-It's tempting to have the orchestrating subgraph resolvers call back to Apollo Router to execute domain-specific mutations. This approach is feasible but requires careful attention to a number of details:
+It's tempting to have the orchestrating subgraph resolvers call back to the Apollo Router to execute domain-specific mutations. This approach is feasible, but it requires careful attention to a number of details:
 
 - The calls to domain-specific mutations no longer originate in client applications, so you must propagate client identity and other request metadata.
 - GraphOS will view these calls as separate operations.
-- If using cloud-native telemetry, you must ensure that Apollo Router receives the trace context to correlate spans.
-- Be wary of circular dependencies. Consider using [Contracts](/graphos/delivery/contracts/) to create variants that expose only the domain-specific mutations and eliminate the potential for loops in an operation.
+- If using cloud-native telemetry, you must ensure that the Apollo Router receives the trace context to correlate spans.
+- Be wary of circular dependencies. Consider using [contracts](/graphos/delivery/contracts/) to create variants that expose only the domain-specific mutations and eliminate the potential for loops in an operation.
