--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -25,7 +25,7 @@ Apollo provides tools for every developer that interacts with GraphQL—whether 
 ## For API implementers
 
 <DocsetGrid>
- <Docset
+  <Docset
     icon={DOCSET_ICONS.graphos}
     title="GraphOS"
     description="Connect any GraphQL API to Apollo's cloud platform to enable powerful features like metrics reporting, schema validation, and the Explorer IDE."
@@ -86,7 +86,11 @@ Apollo provides tools for every developer that interacts with GraphQL—whether 
 **Apollo Client** is the industry-standard GraphQL client library. Execute GraphQL operations, cache their results, and manage all of your application's state in one place.
 
 <DocsetGrid>
-  <Docset icon={DOCSET_ICONS['apollo-client']} title="React / JS" path="/react" />
+  <Docset
+    icon={DOCSET_ICONS['apollo-client']}
+    title="React / JS"
+    path="/react"
+  />
   <Docset icon={DOCSET_ICONS['apollo-ios']} title="iOS" path="/ios" />
   <Docset icon={DOCSET_ICONS['apollo-kotlin']} title="Kotlin" path="/kotlin" />
 </DocsetGrid>
