second test center alignment

--- a/src/content/technotes/TN0042-migrating-away-from-monolith.mdx
+++ b/src/content/technotes/TN0042-migrating-away-from-monolith.mdx
@@ -70,7 +70,7 @@ Using the strangulation pattern, we will arrive at a point where all traffic is 
 We are now officially in a decoupled state, whereby the client has no idea where the data is coming from, *fundamentally* freeing the org to start the decommissioning phase of this pattern; shutting down the monolith section by section.
 
 <img
-    align="center"
+    style="display: block; margin: 0 auto"
     src="./images/moving-away-from-the-monolith/6-shutting-down-monolith-sections.jpg"
     alt="Diagram of the start of removing the monolith"
     width="550"
