second test center alignment

--- a/src/content/technotes/TN0042-migrating-away-from-monolith.mdx
+++ b/src/content/technotes/TN0042-migrating-away-from-monolith.mdx
@@ -24,6 +24,7 @@ The first thing to note - often the hardest - is how do you split the monolith u
 Using the domains discussed above we can see how we could view a monolith in segments relating to specific domains - in figure below
 
 <img
+    style="display: block; margin: 0 auto"
     src="./images/moving-away-from-the-monolith/1-the-monolith.jpg"
     alt="Abstract image of monolith"
     width="550"
